2011-10-06  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/*.d*: Remove CDDL.
	* uts/common/sys/*.h (installed only): Likewise.
	* dtrace.spec: Likewise.

2011-10-05  Nick Alcock  <nick.alcock@oracle.com>

	* runtest.sh: Add --use-installed option, to use a dtrace
	installed to /usr/sbin/dtrace rather than one in the source tree.

	* test/triggers/Build (trigger-template): Append trigger names to
	new TRIGGERS variable.
	* Makerules (triggers): New target building only triggers.
	* GNUmakefile (check-installed): New target, depending on triggers.
	(check-installed-verbose): Likewise.

2011-10-03  Nick Alcock  <nick.alcock@oracle.com>

	* dtrace.spec (BuildRequires): Depend on kernel-headers,
	glibc-headers, byacc, flex, and zlib-devel, to allow successful
	building on bare systems.

	(%files): Manpage filenames must be gzipped.
	(%install): Pass VERSION at install-time too.  Don't install the
	binary twice.

2011-10-03  Nick Alcock  <nick.alcock@oracle.com>

	* README: New.
	* cmd/dtrace.1: Likewise, from OpenSolaris 2009.6.
	* INCOMPATIBILITIES: Be less emphatic: we don't know how to solve
	some of these problems yet.

	* GNUmakefile (VERSION): New.
	(DOCDIR): New, uses VERSION.
	(MANDIR): New.
	(all): Include a local Build as well.
	* dtrace.spec: Pass in VERSION. Mention new files.
	* Build: New, install README and INCOMPATIBILITIES.
	* cmd/Build (install): Install cmd/dtrace.1 too.

	* Makefunctions: Fix comment typo.

2011-10-03  Nick Alcock  <nick.alcock@oracle.com>

	* INCOMPATIBILITIES (Likelihood):
	* Makefunctions (cc-dependencies):

2011-10-02  Nick Alcock  <nick.alcock@oracle.com>

	* GNUmakefile: Ensure $(BITNESS) is defined before (INVARIANT_CFLAGS).

2011-10-01  Nick Alcock  <nick.alcock@oracle.com>

	* dtrace.spec (%changelog): Sort correctly.

2011-09-30  Nick Alcock  <nick.alcock@oracle.com>

	* libproc/Build (libproc_SOURCES): Dropped dt_proc.c.
	* libproc/dt_proc.c: Deleted.
	(ps_getpid): Renamed to Pgetpid() and moved to...